data/derived/sp14/progs/unify/prog4510.ml.out
Characters 128-150:
  let args = List.rev (List.combine (l1 l2)) in
                      ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> ('b * 'a) list
       but an expression was expected of type 'c list
